--- a/web/static/index.html
+++ b/web/static/index.html
@@ -14,7 +14,23 @@
         <a id="total-pnl" class="pill" href="pnl" title="View per-trade PnL">PnL: —</a>
       </div>
 
-      
+      <section>
+        <h2>Open Orders</h2>
+        <table id="orders">
+          <thead>
+            <tr>
+              <th>Market</th>
+              <th>Outcome</th>
+              <th>Side</th>
+              <th>Price</th>
+              <th>Orig Size</th>
+              <th>Matched</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </section>
 
       <section>
         <h2>Positions</h2>
@@ -125,16 +141,21 @@
 
       async function refresh() {
         try {
-          const [posRes, trRes, pnlRes] = await Promise.allSettled([
+          const [ordRes, posRes, trRes, pnlRes] = await Promise.allSettled([
+            fetchJson('api/orders'),
             fetchJson('api/positions'),
             fetchJson(`api/trades?limit=${tradesPerPage}&page=${tradePage}`),
             fetchJson('api/pnl'),
           ]);
 
+          const orders = ordRes.status === 'fulfilled' ? ordRes.value : { data: [] };
           const positions = posRes.status === 'fulfilled' ? posRes.value : { data: [] };
           const trades = trRes.status === 'fulfilled' ? trRes.value : { data: [], total: 0 };
           const pnl = pnlRes.status === 'fulfilled' ? pnlRes.value : { total: 0 };
 
+          setRows(document.querySelector('#orders tbody'), orders.data || [], [
+            'market_name', 'outcome', 'side', 'price', 'original_size', 'size_matched', 'status'
+          ]);
           setRows(
             document.querySelector('#positions tbody'),
             positions.data || [],
