web nicer elements

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -35,7 +35,7 @@
       <section>
         <h2>Positions</h2>
         <div class="positions-header">
-          <button id="close-all-btn" class="btn btn-danger">Close All Positions</button>
+          <button id="close-all-btn" class="btn btn-pill btn-danger">Close All Positions</button>
         </div>
         <table id="positions">
           <thead>
