--- a/web/static/test-positions.html
+++ b/web/static/test-positions.html
@@ -15,7 +15,7 @@
       <section>
         <h2>Positions (Test Data)</h2>
         <div class="positions-header">
-          <button id="close-all-btn" class="btn btn-danger">Close All Positions</button>
+          <button id="close-all-btn" class="btn btn-pill btn-danger">Close All Positions</button>
         </div>
         <table id="positions">
           <thead>
