web nicer elements

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -43,7 +43,7 @@
               <th>Avg Price</th>
               <th>Cur Price</th>
               <th>PnL %</th>
-              <th>Actions</th>
+              <th title="Submit close orders for part or all of a position">Close (25/50/100/Mkt)</th>
             </tr>
           </thead>
           <tbody id="positions-tbody"></tbody>
